# rofl-price-oracle

./: .dockerignore  .env  .env.example  .env.mainnet  .env.testnet  .gitignore  Dockerfile.oracle  Makefile  README.md  compose.local.yaml  compose.yaml  plan-offchain-average.md  pyproject.toml  rofl.yaml
contracts/: .gitignore  foundry.toml  remappings.txt
contracts/script/: DeployMocks.s.sol
contracts/src/: PriceFeedDirectory.sol
contracts/src/mocks/: MockPriceFeedDirectory.sol  MockSimpleAggregator.sol
contracts/test/: MockContracts.t.sol
oracle/: .gitignore  Makefile  main.py  requirements.txt
oracle/src/: AggregatedPair.py  BatchFetchCoordinator.py  ContractUtility.py  PairObserver.py  PriceAggregator.py  PriceOracle.py  RoflUtility.py  RoflUtilityAppd.py  RoflUtilityLocalnet.py  SourceManager.py  __init__.py  usdt_rate_cache.py
oracle/src/fetchers/: __init__.py  base.py  binance.py  bitquery.py  bitstamp.py  coinapi.py  coinbase.py  coingecko.py  coinmarketcap.py  coinpaprika.py  cryptocompare.py  eodhd.py  kraken.py
oracle/tests/: test_AggregatedPair.py  test_PriceAggregator.py  test_RoflUtility.py  test_SourceManager.py
rofl_price_oracle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
